--- a/characters.html
+++ b/characters.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="styles/nogulp.css" />
+	<link rel="stylesheet" type="text/css" href="styles/main.min.css" />
 </head>
 <body>
 
